# menu-analyzer-ai

./: .gitignore  README.md  ai.py  api.py  gradio_ui.py  gradio_wrapper.py  main.py  pyproject.toml  pytest.ini
scripts/: setup_api_testing.py
tests/: README.md  conftest.py  test_api_e2e.py  test_env.py  test_helpers.py  test_llm_wrappers.py  test_ui.py  test_validation.py
